--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -51,3 +51,13 @@ rabbitmq:
     name:
       cancelOrder: cancelOrderQueue
 
+
+
+wx:
+  miniapp:
+    configs:
+      - appid: wx1ba7d5fb1e82cc58
+        secret: 9f6fd82f209589aa55a48e4e06b40ded
+        token: #微信小程序消息服务器配置的token
+        aesKey: #微信小程序消息服务器配置的EncodingAESKey
+        msgDataFormat: JSON
