--- a/mall-portal/src/main/resources/application-prod.yml
+++ b/mall-portal/src/main/resources/application-prod.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: reader
-    password: 123456
+    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: mall
+    password: 2CawNBhBG3r2rKnw
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -18,23 +18,23 @@ spring:
 
   data:
     mongodb:
-      host: mongo
+      host: localhost
       port: 27017
       database: mall-port
 
   redis:
-    host: redis # Redis服务器地址
+    host: localhost # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
     timeout: 300ms # 连接超时时间（毫秒）
 
   rabbitmq:
-    host: rabbit
+    host: localhost
     port: 5672
-    virtual-host: /mall
-    username: mall
-    password: mall
+    virtual-host: /
+    username: guest
+    password: guest
 
 logging:
   file:
@@ -46,3 +46,9 @@ logging:
 logstash:
   host: logstash
 
+minio:
+  endpoint: http://127.0.0.1:9000 #MinIO服务所在地址
+  bucketName: mall #存储桶名称
+  accessKey: zzqimgminio #访问的key
+  secretKey: zzqimgminiopws #访问的秘钥
+  url: http://img.tepsung.cn #MinIO服务所在地址
